<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contenido"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbGorras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/cb_gorras" />

    <CheckBox
        android:id="@+id/cbBanhadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/cb_bañadores" />

    <CheckBox
        android:id="@+id/cbCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/cb_camisetas" />

    <CheckBox
        android:id="@+id/cbZapatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/cb_zapatos" />

    <CheckBox
        android:id="@+id/cbPantalones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/cb_pantalones" />

    <CheckBox
        android:id="@+id/cbLibros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/cb_libros" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVaciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="70dp"
        android:backgroundTint="@color/btn_vaciar"
        android:text="@string/btn_vaciar"
        android:textSize="20sp" />
</LinearLayout>